--- a/permutation/index.html
+++ b/permutation/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>복원하기</title>
+    <title>비버즈 | 수열 복원하기</title>
     <link rel="stylesheet" href="style.css">
+
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/permutation/permutation.js"></script>
 </head>
 <body>
     <div class="container">
         <h1 class="title">순열 복원하기</h1>
         <article class="explain" style="margin-bottom: 80px;">
-            * 원래 순열(A)가 있고, 화면에 순열(B)가 주어집니다.<br>
+            * 원래 순열(A)이 있고, 화면에 순열(B)가 주어집니다.<br>
             * 순열 B를 순열 A로 만들어야 합니다.<br>
-            * 순열(Permutation) A의 (수열의 길이 N) 1 <= I <= N에 대하여 의 모든 값이 다름이 보장된다.<br>
+            * 순열(Permutation) A의 (수열의 길이 N) 1 <= I <= N에 대하여 의 모든 값이 다름을 보장합니다.<br>
         </article>
 
         <hr style="width: 100%; margin-bottom: 60px;">
@@ -26,6 +29,5 @@
         <div id="permutation">
         </div>
     </div>
-    <script src="javascript.js"></script>
 </body>
 </html>
