--- a/coin/index.html
+++ b/coin/index.html
@@ -11,8 +11,8 @@
         <h1 id="title">은행줍기</h1>
         <h3 id="Explanation">초기에 플레이어는 왼쪽 윗칸에 있고, 오직 내려가거나 오른쪽, 왼쪽으로 이동하여 오른쪽 아랫칸에 도달해야 한다. 이 때, 줍는 은행을 최대화해야 한다</h3>
     </div>
+    <button onclick="drawMap()">start<br></button>
     <div id="screen"></div>
-    <button onclick="clickStart()">start<br></button>
     <script src="javascript.js"></script>
 </body>
 </html>
