--- a/coin/index.html
+++ b/coin/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>은행줍기</title>
+    <title>동전줍기</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
-        <h1 id="title">은행줍기</h1>
+        <h1 id="title">동전줍기</h1>
         <h3 id="Explanation">초기에 플레이어는 왼쪽 윗칸에 있고, 오직 내려가거나 오른쪽, 왼쪽으로 이동하여 오른쪽 아랫칸에 도달해야 한다. 이 때, 줍는 은행을 최대화해야 한다</h3>
     </div>
     <button onclick="drawMap()">start<br></button>
