--- a/coin/index.html
+++ b/coin/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <h1 id="title">동전 줍기</h1>
-        <h3 id="Explanation">초기에 플레이어는 왼쪽 윗칸에 있고, 오직 내려가거나 오른쪽, 왼쪽으로 이동하여 오른쪽 아랫칸에 도달해야 한다. 이 때, 줍는 은행을 최대화해야 한다</h3>
+        <h3 id="Explanation">초기에 플레이어는 왼쪽 윗칸에 있고, 오직 내려가거나 오른쪽, 왼쪽으로 이동하여 오른쪽 아랫칸에 도달해야 한다. 이 때, 줍는 동전을 최대화해야 한다</h3>
     </div>
     <div id="screen"></div>
     <div id="score"></div>
