순열 복원 게임 디자인 초안 작성 완료

--- a/permutation/index.html
+++ b/permutation/index.html
@@ -18,7 +18,7 @@
 	<p class="title-text">순열 복원하기</p>
 </section>
 
-<div style="height: 56px;"></div>
+<!--<div style="height: 56px;"></div>-->
 
 <section class="container">
 	<article class="intro" style="transition: .5s;">
@@ -63,7 +63,7 @@
 		</div>
 	</div>
 
-	<div>
+	<!--<div>
 		<div style="display: flex; justify-content: center; ">
 			<div style="position: relative; width: 83px;">
 				<div class="info-key">
@@ -79,7 +79,37 @@
 				</div>
 			</div>
 		</div>
+	</div>-->
+
+	<div style="display: flex; justify-content: space-evenly; max-width: 600px; margin: 20px auto 0; width: 100%;">
+		<div style="display: flex; flex: 1; justify-content: flex-start;">
+			<div style="display: flex; justify-content: center; align-items: center; width: 85px; height: 30px; border-radius: 30px; background: rgba(0, 188, 212, .12); margin-right: 10px;">
+				<span style="color: #00BCD4; font-size: 3px; flex: 1; text-align: center; margin-left: 4px;">
+					차이값
+				</span>
+				<div style="display: flex; justify-content: center; align-items: center; width: 30px; height: 30px; border-radius: 30px; background: rgba(0, 188, 212, .12);">
+					<span style="color: #00BCD4; font-size: 3px;">
+						10
+					</span>
+				</div>
+			</div>
+			<div style="display: flex; justify-content: center; align-items: center; width: 85px; height: 30px; border-radius: 30px; background: rgba(0, 188, 212, .12);">
+				<span style="color: #00BCD4; font-size: 3px; flex: 1; text-align: center; margin-left: 4px;">
+					이동 횟수
+				</span>
+				<div style="display: flex; justify-content: center; align-items: center; width: 30px; height: 30px; border-radius: 30px; background: rgba(0, 188, 212, .12);">
+					<span style="color: #00BCD4; font-size: 3px;">
+						1
+					</span>
+				</div>
+			</div>
+		</div>
+
+		<div style="display: flex; align-items: center; width: 70px; justify-content: center; border: 1px solid #00BCD4; color: #00BCD4; box-sizing: border-box; border-radius: 2px; font-size: 15px;">
+			제출
+		</div>
 	</div>
+
 </section>
 
 <!-- <div class="container">
