폰트 적용 오류 해결

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         }
 
         * {
-            font-family: 'IBM Plex Sans KR Medium', serif;
+            font-family: 'IBMPlexSansKR-Regular', serif;
             color: black;
         }
 
