--- a/index.html
+++ b/index.html
@@ -82,14 +82,6 @@
             justify-content: space-around;
         }
 
-        @media (max-width: 800px) {
-	        .btn-group {
-		        flex-direction: column;
-		        justify-content: space-around;
-		        align-items: center;
-	        }
-        }
-
         .btn {
             border-radius: 5px;
             width: 150px;
@@ -110,7 +102,6 @@
 
 	        text-decoration: none;
 	        margin-right: 20px;
-	        margin-bottom: 20px;
         }
 
         .btn:hover {
@@ -149,6 +140,18 @@
 
         .scroll-btn:hover .scroll-btn-text {
             color: #00BCD4;
+        }
+
+        @media (max-width: 800px) {
+            .btn-group {
+                flex-direction: column;
+                justify-content: space-around;
+                align-items: center;
+            }
+
+	        .btn {
+		        margin: 0 0 20px 0;
+	        }
         }
 	</style>
 </head>
