--- a/index.html
+++ b/index.html
@@ -219,7 +219,10 @@
 				가져오는 방식으로 작동함.</p>
 			<hr id="fa891bc9-99a3-4e6e-b1f6-8c1661244988"/>
 			<h2 id="595def2c-0032-4cf7-bce9-7da626ebc4a5" class="">후기</h2>
-			<p id="6b312715-cba6-40d4-b236-e9f433656269" class="">Production Server 였기 때문에 구현을 주의 깊게 했다.</p></div>
+			<p id="6b312715-cba6-40d4-b236-e9f433656269" class="">박찬솔 : Production Server를 짜는 좋은 경험이 되었다.</p>
+			<p class="">전무강 : 웹 서버의 구조 및 프론트엔드에 대해 이해할 수 잇었다.</p>
+			<p class="">한대희 : HTML 레이아웃을 직접 짜보았다.</p>
+		</div>
 	</article>
 </div>
 
