--- a/ranking/index.html
+++ b/ranking/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>랭킹</title>
 	<link rel="stylesheet" href="style.css">
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -12,7 +13,7 @@
 		<button class="btn" onclick="btn1()">전체 랭킹</button>
 		<button class="btn" onclick="btn2()">동전</button>
 		<button class="btn" onclick="btn3()">순열</button>
-		<button class="btn" onclick="btn4()" style="float: right;">게임하기</button>
+		<button class="btn" onclick="location.replace('/')" style="float: right;">게임하기</button>
 	</div>
 	<div id="board">
 	</div>
