update from notion

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             margin: 0 auto;
             width: 90%;
             max-width: 500px;
-	        display: flex;
-	        flex-direction: column;
+            display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
         }
@@ -71,7 +71,7 @@
         }
 
         .naver {
-	        height: 45px;
+            height: 45px;
             margin: 0 auto;
         }
 
@@ -88,9 +88,9 @@
             height: 45px;
             background-color: rgba(0, 0, 0, 0);
 
-	        display: flex;
-	        align-items: center;
-	        justify-content: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
 
             border: 1px solid rgba(0, 0, 0, .5);
             color: rgba(0, 0, 0, .5);
@@ -100,8 +100,8 @@
             transition: .5s;
             font-size: 16px;
 
-	        text-decoration: none;
-	        margin-right: 20px;
+            text-decoration: none;
+            margin-right: 20px;
         }
 
         .btn:hover {
@@ -123,9 +123,9 @@
             justify-content: center;
             align-items: center;
 
-	        cursor: pointer;
+            cursor: pointer;
 
-	        transition: .5s;
+            transition: .5s;
         }
 
         .scroll-btn-text {
@@ -149,9 +149,9 @@
                 align-items: center;
             }
 
-	        .btn {
-		        margin: 0 0 20px 0;
-	        }
+            .btn {
+                margin: 0 0 20px 0;
+            }
         }
 	</style>
 </head>
@@ -177,7 +177,7 @@
 <hr>
 <div style="width: 90%; margin: 0 auto; padding-top: 40px;" id="intro">
 	<article id="0c0a33b1-24b2-4805-b1ae-e8f241ba631d" class="page sans">
-		<h1 class="page-title">프로젝트 소개</h1>
+		<header><h1 class="page-title">메이커랑 놀자 | 프로젝트 소개</h1></header>
 		<div class="page-body"><h2 id="5e30fc12-bbf1-4146-8288-d806488bcf88" class="">인원 소개</h2>
 			<p id="c9996405-3e5d-44f4-b086-4f022a77c5f9" class="">박찬솔, 전무강, 한대희</p>
 			<h2 id="863be47d-745c-4264-8188-80ec0ee3706b" class="">팀명</h2>
@@ -197,21 +197,15 @@
 			</ul>
 			<hr id="7bb0c75c-2612-4de9-a69d-515f93918dd8"/>
 			<h2 id="183f644f-3d9e-4af0-bebb-ee77a5e91706" class="">만드는 과정</h2>
-			<figure id="4bd5e960-7ca0-4a57-8992-4a133070d35e" class="image">
-				<a
-						href="/assets/Untitled.png"><img
-						style="width: 100%;"
-						src="/assets//Untitled.png"/></a>
-				<figcaption>Frontend Github History [<a href="https://github.com/dongnae/2020-maker-fun-frontend"
-				                                        target="_blank">dongnae/2020-maker-fun-frontend</a>]
+			<figure id="4bd5e960-7ca0-4a57-8992-4a133070d35e" class="image"><a
+					style="width:1545px"
+					src="/assets/Untitled.png"/></a>
+				<figcaption>Frontend Github History [<a href="https://github.com/dongnae/2020-maker-fun-frontend">dongnae/2020-maker-fun-frontend</a>]
 				</figcaption>
 			</figure>
-			<figure id="598e6c98-e2c7-4765-ad86-5fc0e045c3b9" class="image">
-				<a
-						href="/assets/Untitled%201.png"><img
-						style="width: 100%;"
-						src="/assets//Untitled%201.png"/></a>
-				<figcaption>Backend Develop Status</figcaption>
+			<figure id="598e6c98-e2c7-4765-ad86-5fc0e045c3b9" class="image"><a
+					style="width:1920px"
+					src="/assets/Untitled%201.png"/></a>
 			</figure>
 			<hr id="301e17b6-f11b-4024-a808-fc313a965044"/>
 			<h2 id="e8de7be1-4980-41a7-b0a6-6eff6c04a89a" class="">작품 작동 원리</h2>
@@ -219,10 +213,18 @@
 				가져오는 방식으로 작동함.</p>
 			<hr id="fa891bc9-99a3-4e6e-b1f6-8c1661244988"/>
 			<h2 id="595def2c-0032-4cf7-bce9-7da626ebc4a5" class="">후기</h2>
-			<p id="6b312715-cba6-40d4-b236-e9f433656269" class="">박찬솔 : Production Server를 짜는 좋은 경험이 되었다.</p>
-			<p class="">전무강 : 웹 서버의 구조 및 프론트엔드에 대해 이해할 수 잇었다.</p>
-			<p class="">한대희 : HTML 레이아웃을 직접 짜보았다.</p>
-		</div>
+			<ul id="e08d6a23-9992-41db-a855-60c6f019ca2a" class="bulleted-list">
+				<li>박찬솔 : Production Server를 짜는 좋은 경험이 되었다.</li>
+			</ul>
+			<ul id="118bb3eb-d2fc-460f-a940-e810e2425f8c" class="bulleted-list">
+				<li>전무강 : 웹 서버의 구조 및 프론트엔드에 대해 이해할 수 잇었다.</li>
+			</ul>
+			<ul id="eafc39f8-1a36-4b6e-973a-94cdc8eba507" class="bulleted-list">
+				<li>한대희 : HTML 레이아웃을 직접 짜보았다.</li>
+			</ul>
+			<hr id="6a6dc927-b570-4a41-87a2-137629500d33"/>
+			<p id="38ffc5de-bacc-4be0-891b-1bca904a475c" class="block-color-gray"><em>순열 복원 is designed by </em><a
+					href="https://twitter.greenstar.me/"><em>Greenstar1151</em></a></p></div>
 	</article>
 </div>
 
