include embed video

--- a/index.html
+++ b/index.html
@@ -177,8 +177,15 @@
 <hr>
 <div style="width: 90%; margin: 0 auto; padding-top: 40px;" id="intro">
 	<article id="0c0a33b1-24b2-4805-b1ae-e8f241ba631d" class="page sans">
-		<h1 class="page-title">메이커랑 놀자 | 프로젝트 소개</h1>
-		<div class="page-body"><h2 id="5e30fc12-bbf1-4146-8288-d806488bcf88" class="">인원 소개</h2>
+		<header><h1 class="page-title">프로젝트 소개</h1></header>
+		<div class="page-body"><h2 id="4dbaa447-0d81-4d01-9c31-c589052c50a9" class="">플레이 영상</h2>
+			<figure id="793537a5-906a-40e0-93fd-419604904a08">
+				<div class="source"><a href="https://www.youtube.com/watch?v=k7jBeiScl0Y">https://www.youtube.com/watch?v=k7jBeiScl0Y</a>
+				</div>
+				<figcaption>Provided by Youtube, <a href="https://www.youtube.com/watch?v=k7jBeiScl0Y">https://www.youtube.com/watch?v=k7jBeiScl0Y</a>
+				</figcaption>
+			</figure>
+			<h2 id="6d90c994-738c-46db-bd2a-07a37ebdcbcc" class="">인원 소개</h2>
 			<p id="c9996405-3e5d-44f4-b086-4f022a77c5f9" class="">박찬솔, 전무강, 한대희</p>
 			<h2 id="863be47d-745c-4264-8188-80ec0ee3706b" class="">팀명</h2>
 			<p id="05f28dd1-fcb1-4b26-9e35-0ff8a44537e6" class="">Organic</p>
@@ -197,13 +204,15 @@
 			</ul>
 			<hr id="7bb0c75c-2612-4de9-a69d-515f93918dd8"/>
 			<h2 id="183f644f-3d9e-4af0-bebb-ee77a5e91706" class="">만드는 과정</h2>
-			<figure id="4bd5e960-7ca0-4a57-8992-4a133070d35e" class="image"><img
+			<figure id="4bd5e960-7ca0-4a57-8992-4a133070d35e" class="image"><a
+					href="/assets/Untitled.png"><img
 					style="width:1545px"
 					src="/assets/Untitled.png"/></a>
 				<figcaption>Frontend Github History [<a href="https://github.com/dongnae/2020-maker-fun-frontend">dongnae/2020-maker-fun-frontend</a>]
 				</figcaption>
 			</figure>
-			<figure id="598e6c98-e2c7-4765-ad86-5fc0e045c3b9" class="image"><img
+			<figure id="598e6c98-e2c7-4765-ad86-5fc0e045c3b9" class="image"><a
+					href="/assets/Untitled%201.png"><img
 					style="width:1920px"
 					src="/assets/Untitled%201.png"/></a>
 			</figure>
