include embed video

--- a/index.html
+++ b/index.html
@@ -177,10 +177,14 @@
 <hr>
 <div style="width: 90%; margin: 0 auto; padding-top: 40px;" id="intro">
 	<article id="0c0a33b1-24b2-4805-b1ae-e8f241ba631d" class="page sans">
-		<header><h1 class="page-title">프로젝트 소개</h1></header>
-		<div class="page-body"><h2 id="4dbaa447-0d81-4d01-9c31-c589052c50a9" class="">플레이 영상</h2>
+		<h1 class="page-title">프로젝트 소개</h1>
+		<div class="page-body">
+			<h2 id="4dbaa447-0d81-4d01-9c31-c589052c50a9" class="">플레이 영상</h2>
 			<figure id="793537a5-906a-40e0-93fd-419604904a08">
-				<div class="source"><a href="https://www.youtube.com/watch?v=k7jBeiScl0Y">https://www.youtube.com/watch?v=k7jBeiScl0Y</a>
+				<div class="source" style="position: relative; padding-bottom: 56.25%; height: 0;">
+					<iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" width="560" height="315" src="https://www.youtube.com/embed/k7jBeiScl0Y" frameborder="0"
+					        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+					        allowfullscreen></iframe>
 				</div>
 				<figcaption>Provided by Youtube, <a href="https://www.youtube.com/watch?v=k7jBeiScl0Y">https://www.youtube.com/watch?v=k7jBeiScl0Y</a>
 				</figcaption>
