include embed video

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 					        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 					        allowfullscreen></iframe>
 				</div>
-				<figcaption>Provided by Youtube, <a href="https://www.youtube.com/watch?v=k7jBeiScl0Y">https://www.youtube.com/watch?v=k7jBeiScl0Y</a>
+				<figcaption style="text-align: center;">Provided by Youtube, <a href="https://www.youtube.com/watch?v=k7jBeiScl0Y">https://www.youtube.com/watch?v=k7jBeiScl0Y</a>
 				</figcaption>
 			</figure>
 			<h2 id="6d90c994-738c-46db-bd2a-07a37ebdcbcc" class="">인원 소개</h2>
